[tool.poetry]
name = "ask-questions"
version = "0.1.0"
description = "Ask questions"
authors = ["Zarif Aziz"]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.17.0"
torch = "^1.11.0"
torchvision = "^0.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
